fix alignment when panel content is taller

--- a/packages/itwinui-css/src/tabs/base.scss
+++ b/packages/itwinui-css/src/tabs/base.scss
@@ -190,6 +190,7 @@ $borderless-horizontal-tab-min-height: calc(
     }
 
     display: grid;
+    align-content: start;
     overflow-y: auto;
     overflow-x: hidden;
     animation-name: scroll-shadow-inset-vertical;
